# write2x

./: .gitignore  Cargo.toml  config.json
src/: main.rs
