[package]
name = "write2x"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-session = "3.0.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
urandom = "0.1.1"
regex = "1.10.5"
rand = "0.8.5"
sha2 = "0.10.8"
oauth2 = "4.4.2"
reqwest = { version = "0.12.5", features = ["json"] }
